--- a/djangogramm/users/templates/registration/confirm_email.html
+++ b/djangogramm/users/templates/registration/confirm_email.html
@@ -1,5 +1,14 @@
 {% extends 'users/base.html' %}
 
 {% block content %}
-<p>Пожалуйста проверьте свою почту чтобы завершить регистрацию</p>
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="card">
+                <div class="well well-sm">
+                    <br>
+                    <p style="text-align: center"><strong>Пожалуйста проверьте свою почту чтобы завершить регистрацию</strong></p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
