--- a/djangogramm/users/templates/users/base.html
+++ b/djangogramm/users/templates/users/base.html
@@ -4,47 +4,69 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
-    <link type="text/css" href="{% static 'users/css/styles.css' %}" rel="stylesheet"/>
+    <link type="text/css" href="{% static 'users/css/bootstrap.css' %}" rel="stylesheet"/>
+    <link type="text/css" href="{% static 'users/css/styles2.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="shortcut icon" href="{% static 'users/images/ico_2.png' %}" type="image/x-icon"/>
     <meta name="viewport" content="width=768px, maximum-scale=1.0,
 minimum-scale=0.25"/>
+    <script src="{% static 'users/js/bootstrap.js' %}"></script>
+{#    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>#}
+{#    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>#}
 </head>
 <body>
+{% block mainmenu %}
 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+        <div class="container-fluid">
+            <a class="navbar-brand-personal" href="{% url 'home' %}"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                    aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% for m in menu %}
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url m.url_name %}">{{ m.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                {% if search %}
+                    <form class="d-flex" action="{% url 'home' %}">
+                        <input class="form-control me-2" type="search" placeholder="Искать cдесь..." aria-label="Search"
+                               name="search">
+                        <button class="btn btn-outline-success" type="submit">Искать</button>
+                    </form>
+                {% endif %}
+                <ul class="nav justify-content-end">
+                    {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'user' %}">{{ user.username }}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Войти</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+{% endblock mainmenu %}
+<section class="h-100 gradient-custom-2" style="min-height: 1000px">
 <table class="table-page" border="0" cellpadding="0" cellspacing="0">
     <tr>
         <td valign="top">
-            {% block mainmenu %}
-
-                <div class="header">
-                    <ul id="mainmenu" class="mainmenu">
-                        <li class="logo"><a href="{% url 'home' %}">
-                            <div class="logo"></div>
-                        </a></li>
-
-                        {% for m in menu %}
-                            <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
-
-                        {% endfor %}
-                        {% if search %}
-                            <li class="d1">
-                                <form class="search-form" action="{% url 'home' %}">
-                                    <input type="text" placeholder="Искать здесь..." name="search">
-                                    <button type="submit"></button>
-                                </form>
-                            </li>
-                        {% endif %}
-                        {% if request.user.is_authenticated %}
-                            <li class="last"> {{ user.username }} | <a href="{% url 'logout' %}">Выйти</a></li>
-                        {% else %}
-                            <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a
-                                    href="{% url 'login' %}">Войти</a></li>
-                        {% endif %}
-                    </ul>
-                </div>
-            {% endblock mainmenu %}
             <div class="center">
 
                 {% block content %}
@@ -53,6 +75,7 @@ minimum-scale=0.25"/>
         </td>
     </tr>
 </table>
+</section>
 
 </body>
 </html>
