--- a/djangogramm/users/templates/users/addpage.html
+++ b/djangogramm/users/templates/users/addpage.html
@@ -1,30 +1,75 @@
 {% extends 'users/base.html' %}
 {% block content %}
-    <h1>{{ title }}</h1>
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="card">
+                <div class="well well-sm">
 
-    <form action="{% url 'add_page' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="'form-error">{{ form.non_field_errors }}</div>
+                    <form class="form-horizontal" action="{% url 'add_page' %}" method="post"
+                          enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <legend class="text-center">{{ title }}</legend>
+                        <div class="'form-error">{{ form.non_field_errors }}</div>
 
-        <p><label class="form-label"
-                  for="{{ image.image.id_for_label }}">{{ image.image.label }}: </label>{{ image.image }}
-        </p>
-        <div class="form-error">{{ image.image.errors }}</div>
+                        <!-- Image input-->
+                        <p><label class="form-label"
+                                  for="{{ image.image.id_for_label }}">{{ image.image.label }}: </label>{{ image.image }}
+                        </p>
+                        <div class="form-error">{{ image.image.errors }}</div>
 
-        <p><label class="form-label"
-                  for="{{ form.title.id_for_label }}">{{ form.title.label }}: </label>{{ form.title }}</p>
-        <div class="form-error">{{ form.title.errors }}</div>
+                        <!-- Title input-->
+                        <div class="form-group">
+                            <label class="col-md-3 control-label"
+                                   for="{{ form.title.id_for_label }}">{{ form.title.label }}: </label>
+                            <div class="col-md-9">
+                                <input id="title" name="title" type="text" placeholder="Заголовок"
+                                       class="form-control">
+                            </div>
+                            <div class="form-error">{{ form.title.errors }}</div>
+                        </div>
 
-        <p><label class="form-label"
-                  for="{{ form.text.id_for_label }}">{{ form.text.label }}: </label>{{ form.text }}</p>
-        <div class="form-error">{{ form.text.errors }}</div>
+                        <br>
 
-        <p><label class="form-label"
-                  for="{{ tags.tag_title.id_for_label }}">{{ tags.tag_title.label }}: </label>{{ tags.tag_title }} Теги разделяются запятыми.</p>
-        <div class="form-error">{{ tags.tag_title.errors }}</div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-3 control-label"
+                                   for="{{ form.text.id_for_label }}">{{ form.text.label }}: </label>
+                            <div class="col-md-9">
+                                    <textarea class="form-control" id="text" name="text"
+                                              placeholder="Напишите ваш текст сдесь..." rows="5"></textarea>
+                            </div>
+                            <div class="form-error">{{ form.text.errors }}</div>
+                        </div>
+                        <br>
+                        <!-- Tags input-->
+                        <div class="form-group">
+                        <label class="col-md-3 control-label"
+                                  for="{{ tags.tag_title.id_for_label }}">{{ tags.tag_title.label }}: </label>
+                            <div class="col-md-9">
+                                <input id="tag_title" name="tag_title" type="text" placeholder="Теги разделяются запятыми..."
+                                       class="form-control">
+                            </div>
+
+                        <div class="form-error">{{ tags.tag_title.errors }}</div>
+                        </div>
+                        <br>
+
+                        <button type="submit" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+                                style="z-index: 1;">
+                            Добавить
+                        </button>
 
 
-        <button type="submit">Добавить</button>
-    </form>
+                    </form>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+
+
+
 
 {% endblock %}
