исправил поля паролей

--- a/djangogramm/users/templates/registration/register.html
+++ b/djangogramm/users/templates/registration/register.html
@@ -42,7 +42,7 @@
                             <label class="col-md-3 control-label"
                                    for="{{ form.password1.id_for_label }}">{{ form.password1.label }}</label>
                             <div class="col-md-9" style="max-width: 50%">
-                                <input id="password1" name="password1" type="text"
+                                <input id="password1" name="password1" type="password"
                                        class="form-control">
                                 {{ form.password1.help_text }}
                             </div>
@@ -54,7 +54,7 @@
                             <label class="col-md-3 control-label"
                                    for="{{ form.password2.id_for_label }}">{{ form.password2.label }}</label>
                             <div class="col-md-9" style="max-width: 50%">
-                                <input id="password2" name="password2" type="text"
+                                <input id="password2" name="password2" type="password"
                                        class="form-control">
                                 {{ form.password2.help_text }}
                             </div>
