--- a/djangogramm/users/templates/registration/login.html
+++ b/djangogramm/users/templates/registration/login.html
@@ -31,7 +31,7 @@
                             <label class="col-md-3 control-label"
                                    for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
                             <div class="col-md-9" style="max-width: 50%">
-                                <input id="password" name="password" type="text"
+                                <input id="password" name="password" type="password"
                                        class="form-control">
                             </div>
                             <div class="form-error">{{ form.password.errors }}</div>
